pulling styles, less, assets etc to compass-devtools

--- a/src/components/save-pipeline/save-pipeline.less
+++ b/src/components/save-pipeline/save-pipeline.less
@@ -1,4 +1,4 @@
-@import (reference) "~less/compass/_theme.less";
+@import (reference) "~mongodb-compass-theme";
 
 .save-pipeline {
   border-right: 1px solid @gray6;
