--- a/src/components/toggle-stage/toggle-stage.less
+++ b/src/components/toggle-stage/toggle-stage.less
@@ -1,4 +1,4 @@
-@import (reference) "~less/compass/_theme.less";
+@import (reference) "~mongodb-compass-theme";
 
 .toggle-stage {
   margin: 0px 0px 0px 5px;
