--- a/src/components/collation-toolbar/collation-toolbar.less
+++ b/src/components/collation-toolbar/collation-toolbar.less
@@ -1,4 +1,4 @@
-@import (reference) "~less/compass/_theme.less";
+@import (reference) "~mongodb-compass-theme";
 
 .collation-toolbar {
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
