--- a/src/components/delete-pipeline-button/delete-pipeline-button.less
+++ b/src/components/delete-pipeline-button/delete-pipeline-button.less
@@ -1,4 +1,4 @@
-@import (reference) "~less/compass/_theme.less";
+@import (reference) "~mongodb-compass-theme";
 
 .delete-pipeline {
   margin: 0px 10px 0px 0px;
