--- a/src/components/input-builder/input-builder.less
+++ b/src/components/input-builder/input-builder.less
@@ -1,4 +1,4 @@
-@import (reference) "~less/compass/_theme.less";
+@import (reference) "~mongodb-compass-theme";
 
 .input-builder {
   flex-shrink: 0;
