--- a/src/components/input-documents-count/input-documents-count.less
+++ b/src/components/input-documents-count/input-documents-count.less
@@ -1,4 +1,4 @@
-@import (reference) "~less/compass/_theme.less";
+@import (reference) "~mongodb-compass-theme";
 
 .input-documents-count {
   height: 30px;
