--- a/src/components/input-toolbar/input-toolbar.less
+++ b/src/components/input-toolbar/input-toolbar.less
@@ -1,4 +1,4 @@
-@import (reference) "~less/compass/_theme.less";
+@import (reference) "~mongodb-compass-theme";
 
 .input-toolbar {
   border-bottom: 1px solid @gray6;
