--- a/src/components/restore-pipeline-button/restore-pipeline-button.less
+++ b/src/components/restore-pipeline-button/restore-pipeline-button.less
@@ -1,4 +1,4 @@
-@import (reference) "~less/compass/_theme.less";
+@import (reference) "~mongodb-compass-theme";
 
 .restore-pipeline {
   margin-right: 2px;
