--- a/src/components/save-pipeline-card/save-pipeline-card.less
+++ b/src/components/save-pipeline-card/save-pipeline-card.less
@@ -1,4 +1,4 @@
-@import (reference) "~less/compass/_theme.less";
+@import (reference) "~mongodb-compass-theme";
 
 .save-pipeline-card {
   border: 1px solid @gray6;
