--- a/src/components/stage-builder-toolbar/stage-builder-toolbar.less
+++ b/src/components/stage-builder-toolbar/stage-builder-toolbar.less
@@ -1,4 +1,4 @@
-@import (reference) "~less/compass/_theme.less";
+@import (reference) "~mongodb-compass-theme";
 
 .stage-builder-toolbar {
   width: 374px;
