--- a/.storybook/decorators/component-preview.less
+++ b/.storybook/decorators/component-preview.less
@@ -12,18 +12,18 @@
 
   overflow: scroll;
 
-  &::before {
-    content: 'Live Preview';
-    display: block;
-    color: rgb(137, 141, 151);
-    position: absolute;
-    top: -(@gutter + (@gutter/2));
-    left: 0;
-    font-size: 16px;
-    margin-bottom: 20px;
-    margin-top: 0px;
-    pointer-events: none;
-  }
+  // &::before {
+  //   content: 'Live Preview';
+  //   display: block;
+  //   color: rgb(137, 141, 151);
+  //   position: absolute;
+  //   top: -(@gutter + (@gutter/2));
+  //   left: 0;
+  //   font-size: 16px;
+  //   margin-bottom: 20px;
+  //   margin-top: 0px;
+  //   pointer-events: none;
+  // }
 }
 
 .root--light {
