--- a/src/components/pipeline-builder-toolbar/pipeline-builder-toolbar.less
+++ b/src/components/pipeline-builder-toolbar/pipeline-builder-toolbar.less
@@ -10,6 +10,7 @@
   z-index: 100;
 
   :global {
+    @import "~bootstrap/less/dropdowns.less";
     .dropdown {
       margin-left: 3px;
       padding-right: 6px;
