top-level reducers for settings

--- a/.storybook/decorators/component-preview.less
+++ b/.storybook/decorators/component-preview.less
@@ -27,8 +27,21 @@
 }
 
 .root--light {
-  background-color: #fff;
-  border-color: rgb(204, 214, 221);
+background-image:
+  -moz-linear-gradient(45deg, #eee 25%, transparent 25%), 
+  -moz-linear-gradient(-45deg, #eee 25%, transparent 25%),
+  -moz-linear-gradient(45deg, transparent 75%, #eee 75%),
+  -moz-linear-gradient(-45deg, transparent 75%, #eee 75%);
+background-image:
+  -webkit-gradient(linear, 0 100%, 100% 0, color-stop(.25, #eee), color-stop(.25, transparent)), 
+  -webkit-gradient(linear, 0 0, 100% 100%, color-stop(.25, #eee), color-stop(.25, transparent)),
+  -webkit-gradient(linear, 0 100%, 100% 0, color-stop(.75, transparent), color-stop(.75, #eee)),
+  -webkit-gradient(linear, 0 0, 100% 100%, color-stop(.75, transparent), color-stop(.75, #eee));
+
+-moz-background-size:100px 100px;
+background-size: 10px 10px;
+
+background-position:0 0, 5px 0, 5px -5px, 0px 5px;
 }
 
 .root--dark {
