COMPASS-3295: Fullscreen mode

--- a/src/components/pipeline/pipeline.less
+++ b/src/components/pipeline/pipeline.less
@@ -26,4 +26,12 @@
     height: 100%;
     z-index: 500;
   }
+
+  &-fullscreen {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+  }
 }
