--- a/src/components/pipeline-toolbar/pipeline-preview-toolbar.less
+++ b/src/components/pipeline-toolbar/pipeline-preview-toolbar.less
@@ -50,6 +50,11 @@
   .toolbar-component();
 }
 
+.fullscreen {
+  .toolbar-component();
+  margin-left: 5px;
+}
+
 .is-modified {
   .toolbar-component();
 
