fix export to lang button not lined up

--- a/src/components/pipeline-toolbar/pipeline-builder-toolbar.less
+++ b/src/components/pipeline-toolbar/pipeline-builder-toolbar.less
@@ -54,6 +54,10 @@
   &-save-pipeline-button {
     white-space: nowrap;
   }
+
+  &-export-to-language {
+    display: flex;
+  }
 }
 
 .export-icon {
