Styles done. On to modal + reducers

--- a/src/components/pipeline-toolbar/pipeline-builder-toolbar.less
+++ b/src/components/pipeline-toolbar/pipeline-builder-toolbar.less
@@ -52,16 +52,19 @@
 
   &-open-saved-pipelines-button {
     margin-right: 3px;
+    white-space: nowrap;
   }
 
   &-new-button {
     white-space: nowrap;
     border-radius: 3px 0px 0px 3px;
+    border-right: 0;
   }
 
   &-save-pipeline-button {
     white-space: nowrap;
     border-radius: 3px 0px 0px 3px;
+    border-right: 0;
   }
 
   &-export-to-language {
