--- a/src/components/stage-preview-toolbar/stage-preview-toolbar.less
+++ b/src/components/stage-preview-toolbar/stage-preview-toolbar.less
@@ -1,3 +1,5 @@
+@import (reference) "~less/compass/_theme.less";
+
 .stage-preview-toolbar {
   width: 100%;
   margin-left: 25px;
@@ -5,6 +7,12 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+
+  &-link {
+    text-decoration: underline;
+    cursor: pointer;
+    color: @blue3;
+  }
 
   :global {
     i.info-sprinkle {
@@ -22,8 +30,7 @@
         content: "\f05a";
       }
     }
-  }
-  :global {
+
     #stage-tooltip {
       width: 300px;
       white-space: pre-wrap;
