added 1px solid border to banner

--- a/src/components/stage-editor/stage-editor.less
+++ b/src/components/stage-editor/stage-editor.less
@@ -19,7 +19,7 @@
     border-radius: 3px;
     overflow: hidden;
     background: @redLight3;
-    border: @redLight2;
+    border: 1px solid @redLight2;
     min-height: 20px;
     width: 350px;
     word-break: break-all;
@@ -36,7 +36,7 @@
     border-radius: 3px;
     overflow: hidden;
     background: @yellowLight3;
-    border: @yellowLight2;
+    border: 1px solid @yellowLight2;
     min-height: 20px;
     width: 350px;
     word-break: break-all;
