--- a/src/components/stage-builder-toolbar/stage-builder-toolbar.less
+++ b/src/components/stage-builder-toolbar/stage-builder-toolbar.less
@@ -1,7 +1,15 @@
 @import (reference) "~less/compass/_theme.less";
 
 .stage-builder-toolbar {
-  width: 374px;
+  // width: 374px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid @gray6;
+  border-radius: 4px 4px 0 0;
+  padding: 10px 0;
+  padding-right: 10px;
+
   flex-shrink: 0;
   display: flex;
   flex-direction: row;
@@ -18,6 +26,9 @@
     display: flex;
     justify-content: flex-end;
     flex-grow: 4;
+  }
+  &-errored {
+    background: @redLight3;
   }
 
   :global {
