--- a/src/components/stage/stage.less
+++ b/src/components/stage/stage.less
@@ -8,10 +8,34 @@
   box-shadow: 1px 1px 1px @gray6;
   background: @pw;
 
+  display: flex;
+  flex-direction: row;
+
   &-errored {
     border: 1px solid @redBase;
     border-radius: 4px;
     margin: 0px 15px 15px;
     background: @pw;
   }
+}
+
+.stage-editor-container {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  overflow: auto;
+}
+
+.stage-preview-container {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 100%;
+  overflow: auto;
+}
+
+.stage-workspace {
+  display: flex;
+  align-items: stretch;
+  border-radius: 0 0 4px 4px;
 }
