--- a/src/components/pipeline/splitter.less
+++ b/src/components/pipeline/splitter.less
@@ -1,14 +1,17 @@
-  .splitter {
-    position: absolute;
-    top: 34px;
-    left: 400px;
-    border-right: 2px solid rgba(0, 0, 0, 0.1);
-    box-shadow: 1px 0px 2px rgba(0, 0, 0, 0.1);
-    bottom: 0;
-    z-index: 1;
-  }
+.splitter {
+  position: absolute;
+  top: 34px;
+  left: 400px;
+  border-right: 2px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 1px 0px 2px rgba(0, 0, 0, 0.1);
+  bottom: 0;
+  z-index: 1;
+}
 
-  .splitter-expanded {
-    .splitter;
-    top: 76px;
-  }
+.splitter-editing-collation {
+  top: 76px;
+}
+
+.splitter-editing-view {
+  top: 93px;
+}
