update styles with left bar and making things nice

--- a/src/components/resize-handle/resize-handle.less
+++ b/src/components/resize-handle/resize-handle.less
@@ -1,8 +1,10 @@
-@handle-width: 3px;
+@import (reference) "~less/compass/_theme.less";
+
+@handle-width: 4px;
 
 .resize-handle {
   position: absolute;
-  background: #5d6c74;
+  background: @gray6;// #5d6c74;
   width: @handle-width;
   // right: 0;
   height: 100%;
