--- a/src/components/stage-editor-toolbar/stage-editor-toolbar.less
+++ b/src/components/stage-editor-toolbar/stage-editor-toolbar.less
@@ -1,6 +1,6 @@
 @import (reference) "~less/compass/_theme.less";
 
-.stage-builder-toolbar {
+.stage-editor-toolbar {
   // width: 374px;
   width: 100%;
   display: flex;
