--- a/src/components/stage-editor/stage-editor.less
+++ b/src/components/stage-editor/stage-editor.less
@@ -2,7 +2,8 @@
 
 .stage-editor-container {
   position: relative;
-  padding: 10px 18px 10px 18px;
+  padding: 6px 8px;
+  text-align: center;
 }
 
 .stage-editor {
@@ -19,15 +20,13 @@
   &-errormsg {
     flex-shrink: 0;
     position: relative;
-    margin: 10px 18px 10px 18px;
-    padding: 3px 10px 2px 10px;
+    margin: 10px;
+    padding: 5px 10px;
     border-radius: 3px;
     overflow: hidden;
     background: @redLight3;
     border: 1px solid @redLight2;
     min-height: 20px;
-    // width: 350px;
-    width: 100%;
     word-break: break-all;
     color: @redDark2;
     font-size: x-small;
@@ -37,15 +36,13 @@
   &-syntax-error {
     flex-shrink: 0;
     position: relative;
-    margin: 10px 18px 10px 18px;
-    padding: 3px 10px 2px 10px;
+    margin: 10px;
+    padding: 5px 10px;
     border-radius: 3px;
     overflow: hidden;
     background: @yellowLight3;
     border: 1px solid @yellowLight2;
     min-height: 20px;
-    // width: 350px;
-    width: 100%;
     word-break: break-all;
     color: @yellowDark2;
     font-size: x-small;
