--- a/src/components/stage-preview/stage-preview.less
+++ b/src/components/stage-preview/stage-preview.less
@@ -13,6 +13,10 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    fill: none;
+    stroke: #89979B;
+    text-align: center;
+    margin-top: 50px;
   }
 
   &-out {
