remove code comments

--- a/src/components/resize-handle/resize-handle.less
+++ b/src/components/resize-handle/resize-handle.less
@@ -4,11 +4,7 @@
 
 .resize-handle {
   position: absolute;
-  background: @gray6;// #5d6c74;
+  background: @gray6;
   width: @handle-width;
-  // right: 0;
   height: 100%;
-  // box-shadow: 
-  //   0 4px 0 0 #5d6c74,
-  //   0 8px 0 0 #5d6c74;
 }
