--- a/src/components/stage/stage.less
+++ b/src/components/stage/stage.less
@@ -3,12 +3,11 @@
 .stage-container {
   margin: 0px 9px 0px;
   padding-bottom: 15px;
-  border-left: 2px solid @gray6;// #89979B;
+  border-left: 2px solid @gray6;
   position: relative;
 
   &:before {
     position: absolute;
-    // left: -8px;
     left: -2px;
     top: 10px;
     content: '';
@@ -24,7 +23,7 @@
     width: 12px;
     height: 12px;
     border-radius: 50%;
-    border: 2px solid @gray6;// #89979B;
+    border: 2px solid @gray6;
   }
 
   &-is-first {
