Remove offset on drag layer positioning

--- a/src/components/add-stage/add-stage.less
+++ b/src/components/add-stage/add-stage.less
@@ -13,7 +13,7 @@
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    border: 5px solid @gray6;// #89979B;
+    border: 5px solid @gray6;
   }
 
   .add-stage {
