make resize handle a bit darker on hover

--- a/src/components/stage/stage.less
+++ b/src/components/stage/stage.less
@@ -70,6 +70,16 @@
   overflow: auto;
 }
 
+.stage-resize-handle-wrapper {
+  &:hover, &:active {
+    div {
+      div {
+        background-color: @gray5;
+      }
+    }
+  }
+}
+
 .stage-workspace {
   display: flex;
   align-items: stretch;
