--- a/src/components/node-pipeline/context-menu/context-menu.less
+++ b/src/components/node-pipeline/context-menu/context-menu.less
@@ -1,8 +1,28 @@
 
 
 .context-menu {
-  padding: 20px;
   border: 1px solid black;
   background-color: white;
   position: absolute;
+  padding: 4px 1px;
+  width: 120px;
+}
+
+.context-menu-options {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+
+  li {
+    width: 100%;
+    a {
+      padding: 4px 10px;
+      width: 100%;
+
+      &:hover {
+        background-color: #f5f5f5;
+      }
+    }
+  }
 }
