--- a/src/components/node-pipeline/context-menu/context-menu.less
+++ b/src/components/node-pipeline/context-menu/context-menu.less
@@ -4,8 +4,14 @@
   border: 1px solid black;
   background-color: white;
   position: absolute;
-  padding: 4px 1px;
-  width: 120px;
+  padding: 1px;
+  min-width: 120px;
+}
+
+.context-menu-search-input {
+  padding: 4px;
+  width: 100%;
+  border: 2px solid gray;
 }
 
 .context-menu-options {
@@ -13,16 +19,25 @@
   padding: 0;
   margin: 0;
   width: 100%;
+  max-height: 300px;
+  overflow-y: scroll;
 
   li {
     width: 100%;
     a {
       padding: 4px 10px;
       width: 100%;
+      display: block;
+      text-decoration: none;
+      color: black;
 
       &:hover {
-        background-color: #f5f5f5;
+        background-color: #f0f0f0;
       }
     }
   }
+}
+
+.tooltip {
+  max-width: 340px !important;
 }
